syntax = "proto3";

package stella.book.v1;

service BookService {
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse) {}
  rpc GetBook(GetBookRequest) returns (Book) {}
  rpc CreateBook(CreateBookRequest) returns (Book) {}
}

message Book {
  int64 id = 1;
  string name = 2;
  string isbn = 3;
  repeated string authors = 4;
  string publisher = 5;
  string content = 6;
  string cover_image = 7;
}

message ListBooksRequest {
  string filter = 1;
}

message ListBooksResponse {
  repeated Book books = 1;
}

message GetBookRequest {
  int64 id = 1;
}

message CreateBookRequest {
  string name = 2;
  string isbn = 3;
  repeated string authors = 4;
  string publisher = 5;
  string content = 6;
  string cover_image = 7;
}
